--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "build:deploy": "npm run build && npm run deploy"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
